layer.conf: add explicit True to getVar() for compatibility with OE 2.2 and earlier
  OE 2.0 and earlier : getVar() expand False by default
  OE 2.1 and OE 2.2  : getVar() expand option must be explicit
  OE 2.3 and later   : getVar() expand True by default

See bitbake commits:

  https://git.openembedded.org/bitbake/commit/?id=fab717d303df0bcef737661f6917f275f35215a4
  https://git.openembedded.org/bitbake/commit/?id=caf5bb9b7fe254bca9da077ebcb84a37d1f96dd4

Signed-off-by: Andre McCurdy <armccurdy@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -18,5 +18,5 @@ LAYERSERIES_COMPAT_gplv2 = "zeus"
 
 LICENSE_PATH += "${LAYERDIR}/licenses"
 
-PREFERRED_VERSION_shared-mime-info = "${@['', '1.10']['GPLV3' in (d.getVar('INCOMPATIBLE_LICENSE') or '').upper()]}"
-PREFERRED_VERSION_shared-mime-info-native = "${@['', '1.10']['GPLV3' in (d.getVar('INCOMPATIBLE_LICENSE') or '').upper()]}"
+PREFERRED_VERSION_shared-mime-info = "${@['', '1.10']['GPLV3' in (d.getVar('INCOMPATIBLE_LICENSE', True) or '').upper()]}"
+PREFERRED_VERSION_shared-mime-info-native = "${@['', '1.10']['GPLV3' in (d.getVar('INCOMPATIBLE_LICENSE', True) or '').upper()]}"
